--- a/VRGame/UserSettings/Search.settings
+++ b/VRGame/UserSettings/Search.settings
@@ -7,7 +7,7 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.DA949528" = "code"
+	"last_search.DA949528" = "ip"
 	"OpenInspectorPreview.DA949528" = "0"
 	"currentGroup.DA949528" = "all"
 }
